--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :article do |f| %>
+<%= form_for :article, url: articles_path do |f| %>
 	<div class="form-group">
 		<%= f.label :title %>
 		<%= f.text_field :title %>
