--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<h1>Listing articles</h1>
+			<%= link_to 'New article', new_article_path %>
 <div class="table-responsive">
 	<table class="table table-hover">
 		<thead>
