--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,18 @@
 <%= form_for :article, url: articles_path do |f| %>
+
+	<% if @article.errors.any? %>
+		<div class="alert alert-danger">
+			<h2>
+				<%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
+			</h2>
+			<ul class="list-unstyled">
+				<% @article.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+
 	<div class="form-group">
 		<%= f.label :title %>
 		<%= f.text_field :title %>
