--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,7 +4,7 @@
 		<div class="col-sm-6">
 			<h1>Editing article</h1>
 
-			<%= form_for :article, url: articles_path(@article), method: :patch do |f| %>
+			<%= form_for :article, url: article_path(@article), method: :patch do |f| %>
 
 				<% if @article.errors.any? %>
 					<div class="alert alert-danger">
