--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@
 			<tr>
 				<th>Title</th>
 				<th>Content</th>
-				<th>&nbsp;</th>
+				<th colspan="2"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -18,6 +18,7 @@
 					<td><%= article.title %></td>
 					<td><%= article.text %></td>
 					<td><%= link_to 'show', article_path(article) %></td>
+					<td><%= link_to 'Edit', edit_article_path(article) %></td>
 				</tr>
 			<% end %>
 		</tbody>
