--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,7 @@
 				</p>
 			</article>
 
+			<%= link_to 'Edit', edit_article_path(@article) %> | 
 			<%= link_to 'Back', articles_path %>
 		</div>
 	</div>
