--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,31 +4,7 @@
 		<div class="col-sm-6">
 			<h1>Editing article</h1>
 
-			<%= form_for :article, url: article_path(@article), method: :patch do |f| %>
-
-				<% if @article.errors.any? %>
-					<div class="alert alert-danger">
-						<h2>
-							<%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-						</h2>
-						<ul class="list-unstyled">
-							<% @article.errors.full_messages.each do |msg| %>
-								<li><%= msg %></li>
-							<% end %>
-						</ul>
-					</div>
-				<% end %>
-
-				<div class="form-group">
-					<%= f.label :title %>
-					<%= f.text_field :title %>
-				</div>
-				<div class="form-group">
-					<%= f.label :text %>
-					<%= f.text_area :text %>
-				</div>
-				<%= f.submit %>
-			<% end %>
+			<%= render 'form' %>
 
 			<%= link_to 'Back', articles_path %>
 
