--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,27 +1,5 @@
-<%= form_for :article, url: articles_path do |f| %>
+<h1>New article</h1>
 
-	<% if @article.errors.any? %>
-		<div class="alert alert-danger">
-			<h2>
-				<%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-			</h2>
-			<ul class="list-unstyled">
-				<% @article.errors.full_messages.each do |msg| %>
-					<li><%= msg %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
-
-	<div class="form-group">
-		<%= f.label :title %>
-		<%= f.text_field :title %>
-	</div>
-	<div class="form-group">
-		<%= f.label :text %>
-		<%= f.text_area :text %>
-	</div>
-	<%= f.submit %>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back', articles_path %>
