--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@
 			<tr>
 				<th>Title</th>
 				<th>Content</th>
-				<th colspan="2"></th>
+				<th colspan="3"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -19,6 +19,7 @@
 					<td><%= article.text %></td>
 					<td><%= link_to 'show', article_path(article) %></td>
 					<td><%= link_to 'Edit', edit_article_path(article) %></td>
+					<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 				</tr>
 			<% end %>
 		</tbody>
