--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,18 @@
 				<p>
 					<%= @article.text %>
 				</p>
+				<h2>Add a comment:</h2>
+				<%= form_for([@article, @article.comments.build]) do |f| %>
+					<div class="form-group">
+						<%= f.label :commenter %>
+						<%= f.text_field :commenter %>
+					</div>
+					<div class="form-group">
+						<%= f.label :body %>
+						<%= f.text_area :body %>
+					</div>
+					<%= f.submit %>
+				<% end %>
 			</article>
 
 			<%= link_to 'Edit', edit_article_path(@article) %> | 
