--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,11 +15,11 @@
 
 	<div class="form-group">
 		<%= f.label :title %>
-		<%= f.text_field :title %>
+		<%= f.text_field :title, class: "form-control" %>
 	</div>
 	<div class="form-group">
 		<%= f.label :text %>
-		<%= f.text_area :text %>
+		<%= f.text_area :text, class: "form-control", rows: "10" %>
 	</div>
-	<%= f.submit %>
+	<%= f.submit "Create Article", :class => "btn btn-primary" %>
 <% end %>
