--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-md-8 col-md-offset-2">
 			<h1>Editing article</h1>
 
 			<%= render 'form' %>
