--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,30 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-md-10 col-md-offset-1">
 			<h1>Listing articles</h1>
-			<%= link_to 'New article', new_article_path %>
-<div class="table-responsive">
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>Title</th>
-				<th>Content</th>
-				<th colspan="3"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @articles.each do |article| %>
-				<tr>
-					<td><%= article.title %></td>
-					<td><%= article.text %></td>
-					<td><%= link_to 'show', article_path(article) %></td>
-					<td><%= link_to 'Edit', edit_article_path(article) %></td>
-					<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
-</div>
+			<%= link_to 'New article', new_article_path, :class => "btn btn-primary" %>
+				<div class="table-responsive">
+					<table class="table table-hover table-bordered">
+						<thead>
+							<tr>
+								<th>Title</th>
+								<th>Content</th>
+								<th colspan="3"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<% @articles.each do |article| %>
+								<tr>
+									<td><%= article.title %></td>
+									<td><%= article.text %></td>
+									<td><%= link_to 'show', article_path(article) %></td>
+									<td><%= link_to 'Edit', edit_article_path(article) %></td>
+									<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+								</tr>
+							<% end %>
+						</tbody>
+					</table>
+				</div>
 		</div>
 	</div>
 </div>
