--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New article</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<h1>New article</h1>
 
-<%= render 'form' %>
+			<%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+			<%= link_to 'Back', articles_path %>
+		</div>
+	</div>
+</div>
