--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for([@article, @article.comments.build]) do |f| %>
 	<div class="form-group">
 		<%= f.label :commenter %>
-		<%= f.text_field :commenter %>
+		<%= f.text_field :commenter, class: "form-control" %>
 	</div>
 	<div class="form-group">
 		<%= f.label :body %>
-		<%= f.text_area :body %>
+		<%= f.text_area :body, class: "form-control" %>
 	</div>
-	<%= f.submit %>
+	<%= f.submit "Submit", :class => "btn btn-primary" %>
 <% end %>
