--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 			<h1>Listing articles</h1>
 			<%= link_to 'New article', new_article_path, :class => "btn btn-primary" %>
 				<div class="table-responsive">
-					<table class="table table-hover table-bordered">
+					<table class="table table-bordered">
 						<thead>
 							<tr>
 								<th>Title</th>
